--- a/src/client/components/layout/Container/style.css
+++ b/src/client/components/layout/Container/style.css
@@ -1,4 +1,12 @@
+@import "theme";
+
 .container {
-  max-width: 75rem;
+  max-width: 48rem;
   margin: 0 auto;
+}
+
+@media (--breakpoint-lg) {
+  .container {
+    max-width: 70rem;
+  }
 }
