--- a/src/client/components/layout/Footer/style.css
+++ b/src/client/components/layout/Footer/style.css
@@ -1,3 +1,8 @@
+@import "theme";
+
 .footer {
+  border-top: 0.0625rem solid var(--palette-grey);
+  padding: 2rem;
   text-align: center;
+  margin: 0 2rem;
 }
