Fix stylelint errors

--- a/src/client/styles/theme/_typography.css
+++ b/src/client/styles/theme/_typography.css
@@ -1,5 +1,5 @@
 :root {
-  --typography-sans: 'Nunito', sans-serif;
+  --typography-sans: "Nunito", sans-serif;
 
   --typography-md: 1rem;
   --typography-lg: 1.25rem;
