--- a/src/client/styles/global.css
+++ b/src/client/styles/global.css
@@ -3,3 +3,12 @@
 body {
   font-family: var(--typography-sans);
 }
+
+a {
+  color: var(--palette-primary-dark);
+  text-decoration: none;
+}
+
+a:hover {
+  text-decoration: underline;
+}
