--- a/src/client/components/pages/WordsRouter/WordListPage/List/style.css
+++ b/src/client/components/pages/WordsRouter/WordListPage/List/style.css
@@ -4,7 +4,7 @@
   background: var(--palette-secondary);
   padding: 1rem;
   border: 0.125rem solid rgba(0, 0, 0, 0.1);
-  margin: 0 1rem 1rem;
+  margin: 0 0 1rem;
 }
 
 .words {
