--- a/src/client/components/core/Card/style.css
+++ b/src/client/components/core/Card/style.css
@@ -1,7 +1,12 @@
 @import "theme";
 
 .card {
+  display: block;
   background: var(--palette-secondary);
   padding: 1rem;
   border: 0.125rem solid rgba(0, 0, 0, 0.1);
+}
+
+.card.linked:hover {
+  border-color: rgba(0, 0, 0, 0.25);
 }
