--- a/src/client/components/core/Card/style.css
+++ b/src/client/components/core/Card/style.css
@@ -7,6 +7,11 @@
   border: 0.125rem solid rgba(0, 0, 0, 0.1);
 }
 
+.card.linked {
+  color: initial;
+}
+
 .card.linked:hover {
   border-color: rgba(0, 0, 0, 0.25);
+  text-decoration: none;
 }
