--- a/src/client/components/pages/HomePage/style.css
+++ b/src/client/components/pages/HomePage/style.css
@@ -1,1 +1,16 @@
 @import "theme";
+
+@media (--breakpoint-lg) {
+  .home-page {
+    display: grid;
+    gap: 0.5rem;
+    grid-template-columns: repeat(2, 1fr);
+    margin: 0;
+  }
+}
+
+.card {
+  text-align: center;
+  margin-bottom: 1rem;
+  font-size: var(--typography-lg);
+}
