Make bigger text

--- a/src/client/components/pages/FlashcardSetsRouter/FlashcardSetPage/FlashcardSet/Flashcard/style.css
+++ b/src/client/components/pages/FlashcardSetsRouter/FlashcardSetPage/FlashcardSet/Flashcard/style.css
@@ -7,6 +7,10 @@
   margin-bottom: 1rem;
 }
 
+.flashcard p {
+  font-size: var(--typography-lg);
+}
+
 .flashcard .front, .flashcard .back {
   transition: transform 1s;
   backface-visibility: hidden;
