--- a/src/client/components/pages/FlashcardSetsRouter/FlashcardSetPage/FlashcardSet/style.css
+++ b/src/client/components/pages/FlashcardSetsRouter/FlashcardSetPage/FlashcardSet/style.css
@@ -4,6 +4,7 @@
   display: flex;
   justify-content: space-between;
   margin-bottom: 1rem;
+  align-items: center;
 }
 
 .shuffle-button-container {
